if (WIN32)
	if(NOT BUILD_SHARED_LIBS)
		set_target_properties(visca PROPERTIES COMPILE_DEFINITIONS "VISCA_API=")
	endif()

	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
	add_compile_definitions(_CRT_NONSTDC_NO_WARNINGS)
endif()
ADD_EXECUTABLE(visca_cli visca_cli.c)
ADD_EXECUTABLE(testvisca testvisca.c)
TARGET_LINK_LIBRARIES(visca_cli visca)
TARGET_LINK_LIBRARIES(testvisca visca)
INSTALL(TARGETS visca_cli RUNTIME DESTINATION bin)
INSTALL(TARGETS testvisca RUNTIME DESTINATION bin)
